# Gseek

./: README.md
gseek/: CMakeLists.txt
gseek/include/: compress.hpp  global.hpp  gseek.hpp  gtime.hpp  inverted_index.hpp  inverted_list.hpp  singleton.hpp  webpage_load.hpp  wikipage_load.hpp
gseek/include/sql/: database.hpp
gseek/include/utf/: utf32.hpp
gseek/src/: CMakeLists.txt  global.cpp  gseek.cpp  gtime.cpp  inverted_index.cpp  inverted_list.cpp  main.cpp  wikipage_load.cpp
gseek/src/sql/: database.cpp
gseek/src/utf/: utf32.cpp
